--- a/src/net/server/CMakeLists.txt
+++ b/src/net/server/CMakeLists.txt
@@ -13,4 +13,4 @@ include_directories(
 )
 
 add_library(${TARGET} STATIC ${SOURCES})
-target_link_libraries(${TARGET} utillib corelib)
+target_link_libraries(${TARGET} OpenSSL::Crypto OpenSSL::SSL utillib corelib)
